<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        tools:context=".activities.SongSettingsActivity">


    <android.support.v4.widget.NestedScrollView android:layout_width="match_parent"
                                                android:layout_height="match_parent"
                                                android:fillViewport="true"
                                                android:animateLayoutChanges="true"
                                                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                                                app:layout_constraintStart_toStartOf="parent"
                                                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                                                app:layout_constraintTop_toTopOf="parent"
                                                app:layout_constraintEnd_toEndOf="parent"
                                                android:layout_marginEnd="8dp" android:layout_marginBottom="50dp"
                                                app:layout_constraintBottom_toBottomOf="parent"
                                                android:id="@+id/nestedScrollView">

        <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                     android:layout_height="match_parent">
            <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:background="@drawable/imageview_background"
                    android:id="@+id/imageViewSongPhoto" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:scaleType="fitXY"
                    android:layout_marginTop="50dp" app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
            <TextView
                    android:text="TextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:id="@+id/textViewSongName" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/imageViewSongPhoto"/>
            <TextView
                    android:text="TextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorGray"
                    android:gravity="center"
                    android:id="@+id/textViewArtist" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textViewSongName"/>
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:src="@drawable/ic_favorite_white_24dp"
                    android:id="@+id/imageViewFavourite" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="32dp" android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/textViewArtist"/>
            <TextView
                    android:text="@string/text_add_favourite"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewFavourite" app:layout_constraintStart_toEndOf="@+id/imageViewFavourite"
                    android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:textStyle="bold"
                    android:singleLine="true"
                    app:layout_constraintTop_toTopOf="@+id/imageViewFavourite"
                    app:layout_constraintBottom_toBottomOf="@+id/imageViewFavourite"/>
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:src="@drawable/ic_playlist_add_white_24dp"
                    android:id="@+id/imageViewAddPlaylist" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/imageViewFavourite"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="32dp"/>
            <TextView
                    android:text="@string/text_add_playlist"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewAddPlaylist" app:layout_constraintStart_toEndOf="@+id/imageViewAddPlaylist"
                    android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:textStyle="bold"
                    android:singleLine="true"
                    app:layout_constraintBottom_toBottomOf="@+id/imageViewAddPlaylist"
                    app:layout_constraintTop_toTopOf="@+id/imageViewAddPlaylist"/>
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:src="@drawable/ic_queue_music_white_24dp"
                    android:id="@+id/imageViewQueue" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/imageViewAddPlaylist"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"/>
            <TextView
                    android:text="@string/text_add_queue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewQueue" app:layout_constraintStart_toEndOf="@+id/imageViewQueue"
                    android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:textStyle="bold"
                    android:singleLine="true"
                    app:layout_constraintTop_toTopOf="@+id/imageViewQueue"
                    app:layout_constraintBottom_toBottomOf="@+id/imageViewQueue"/>
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:src="@drawable/ic_add_to_photos_white_24dp"
                    android:id="@+id/imageViewChangePhoto" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="32dp" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/imageViewQueue"/>
            <TextView
                    android:text="@string/text_change_photo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewChangePhoto" app:layout_constraintStart_toEndOf="@+id/imageViewChangePhoto"
                    android:layout_marginStart="16dp"
                    android:textStyle="bold"
                    android:singleLine="true"
                    app:layout_constraintTop_toTopOf="@+id/imageViewChangePhoto"
                    app:layout_constraintBottom_toBottomOf="@+id/imageViewChangePhoto"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:src="@drawable/ic_whatshot_white_24dp"
                    android:id="@+id/imageViewBestPart" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="32dp" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/imageViewChangePhoto"/>
            <TextView
                    android:text="@string/text_best_part"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewBestPart" app:layout_constraintStart_toEndOf="@+id/imageViewBestPart"
                    android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                    android:textStyle="bold"
                    android:singleLine="true"
                    android:layout_marginEnd="8dp" app:layout_constraintTop_toTopOf="@+id/imageViewBestPart"
                    app:layout_constraintBottom_toBottomOf="@+id/imageViewBestPart"/>
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:src="@drawable/ic_gesture_white_24dp"
                    android:id="@+id/imageViewGesture" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="32dp" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/imageViewBestPart"/>
            <TextView
                    android:text="@string/text_automatic_volume"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewGesture" app:layout_constraintStart_toEndOf="@+id/imageViewGesture"
                    android:layout_marginStart="16dp"
                    android:textStyle="bold"
                    android:singleLine="true"
                    app:layout_constraintTop_toTopOf="@+id/imageViewGesture"
                    app:layout_constraintBottom_toBottomOf="@+id/imageViewGesture"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"/>


        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>
    <TextView
            android:text="@string/text_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:singleLine="true"
            android:id="@+id/textViewCancel" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/nestedScrollView" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"/>


</android.support.constraint.ConstraintLayout>